# MCompression

./: .gitignore  CMakeLists.txt  README.md  bib.txt  cdc.txt  fixed.txt  output.txt  setup.sh  test.sh
.lh/: .gitignore.json  CMakeLists.txt.json  output.txt.json  test.sh.json
.lh/include/: absmethod.h.json  odess.h.json
.lh/src/app/: main.cc.json
.lh/src/chunking/: chunker.cc.json
.lh/src/method/: Odess.cc.json  absMethod.cc.json
.lh/src/util/: lz4.c.json
include/: NTransFormSF.h  absmethod.h  allmethod.h  atomicops.h  bisearch.h  chunker.h  config.h  datawrite.h  dedup.h  define.h  finesse.h  gear_matrix.h  locality.h  lruCache.h  lz4.h  messageQueue.h  ntransform.h  odess.h  odess_multi_layered.h  odess_similarity_detection.h  palantir.h  readCache.h  readerwriterqueue.h  similiarityDetection.h  struct.h  tarType.h  xdelta3.h
src/: CMakeLists.txt
src/app/: CMakeLists.txt  delta.cc  main.cc
src/chunking/: CMakeLists.txt  chunker.cc
src/datawrite/: CMakeLists.txt  datawrite.cc
src/method/: BiSearch.cc  CMakeLists.txt  Dedup.cc  Finesse.cc  Locality.cc  NTrans.cc  Ntrans_similarity.cc  Odess.cc  absMethod.cc  odess_similarity_detection.cc  palantir.cc
src/util/: CMakeLists.txt  lz4.c  readCache.cc  xxhash.cc
